# internal/handlers/character_handler.go
@@ -3,10 +3,10 @@ package handlers
 import (
 	"net/http"
 
-	"github.com/gin-gonic/gin"
-
 	"table_top/internal/dtos/requests/characters"
 	"table_top/internal/services"
+
+	"github.com/gin-gonic/gin"
 )
 
 type CharacterHandler struct {
@@ -20,19 +20,21 @@ func NewCharacterHandler(service services.CharacterService) *CharacterHandler {
 // CreateCharacter godoc
 // @Summary Create a new character
 // @Description Create a new character
+// @Tags Characters
 // @Accept  json
 // @Produce  json
 // @Param character body characters.CreateRequest true "Character"
 // @Success 200 {object} models.Character
 // @Router /characters [post]
 func (h *CharacterHandler) CreateCharacter(c *gin.Context) {
+	ctx := c.Request.Context()
 	var character characters.CreateRequest
 	if err := c.ShouldBindJSON(&character); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	characterRepo, err := h.service.CreateCharacter(&character)
+	characterRepo, err := h.service.CreateCharacter(ctx, &character)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -44,12 +46,14 @@ func (h *CharacterHandler) CreateCharacter(c *gin.Context) {
 // DeleteCharacter godoc
 // @Summary Delete a character by ID
 // @Description Delete a character by ID
+// @Tags Characters
 // @Param id path string true "Character ID"
 // @Success 204
 // @Router /characters/{id} [delete]
 func (h *CharacterHandler) DeleteCharacter(c *gin.Context) {
+	ctx := c.Request.Context()
 	id := c.Param("id")
-	if err := h.service.DeleteCharacter(id); err != nil {
+	if err := h.service.DeleteCharacter(ctx, id); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
@@ -59,13 +63,15 @@ func (h *CharacterHandler) DeleteCharacter(c *gin.Context) {
 // GetCharacter godoc
 // @Summary Get a character by ID
 // @Description Get a character by ID
+// @Tags Characters
 // @Produce  json
 // @Param id path string true "Character ID"
 // @Success 200 {object} models.Character
 // @Router /characters/{id} [get]
 func (h *CharacterHandler) GetCharacter(c *gin.Context) {
+	ctx := c.Request.Context()
 	id := c.Param("id")
-	character, err := h.service.GetCharacterByID(id)
+	character, err := h.service.GetCharacterByID(ctx, id)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -76,11 +82,13 @@ func (h *CharacterHandler) GetCharacter(c *gin.Context) {
 // ListCharacters godoc
 // @Summary List all characters
 // @Description List all characters
+// @Tags Characters
 // @Produce  json
 // @Success 200 {array} models.Character
 // @Router /characters [get]
 func (h *CharacterHandler) ListCharacters(c *gin.Context) {
-	characters, err := h.service.ListCharacters()
+	ctx := c.Request.Context()
+	characters, err := h.service.ListCharacters(ctx)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -91,19 +99,21 @@ func (h *CharacterHandler) ListCharacters(c *gin.Context) {
 // UpdateCharacter godoc
 // @Summary Update a character
 // @Description Update a character
+// @Tags Characters
 // @Accept  json
 // @Produce  json
 // @Param character body characters.UpdateRequest true "Character"
 // @Success 200 {object} models.Character
 // @Router /characters [put]
 func (h *CharacterHandler) UpdateCharacter(c *gin.Context) {
+	ctx := c.Request.Context()
 	var request characters.UpdateRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	character, err := h.service.UpdateCharacter(&request)
+	character, err := h.service.UpdateCharacter(ctx, &request)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
